# rust-cookbook-code

./: .gitignore  Cargo.toml  README.md
algorithm/: Cargo.toml
algorithm/src/: main.rs  rand_password.rs  sortby.rs
commandline/: Cargo.toml
commandline/src/: main.rs
compress/: Cargo.toml
compress/examples/: compress.rs
compress/src/: compress.rs  main.rs
concurrency/: Cargo.toml  log4rs.yaml
concurrency/examples/: data_channel.rs  par_search_vec.rs  par_sort_vec.rs  passing_data.rs  per_map_reduce.rs  per_thumbnail.rs  short_thread.rs  thread_global_variable.rs
concurrency/src/: filehash.rs  find_max.rs  global_mutable_state.rs  main.rs  pass_data.rs  pipe.rs
cryptography/: Cargo.toml
cryptography/examples/: hashing.rs  hmac.rs  password_encryption.rs
data-structure/: Cargo.toml
data-structure/examples/: bitfield.rs
data-structure/src/: main.rs
database/: Cargo.toml  cats.db
database/examples/: cat1.rs  person.rs
datetime/: Cargo.toml
datetime/examples/: datetime_compute.rs  format.rs  runtime.rs  timezone.rs
devtools_c/: Cargo.toml  build.rs
devtools_c/src/: hello.c  main.rs
devtools_c_define/: Cargo.toml
devtools_c_define/src/: foo.c  main.rs
devtools_cpp/: Cargo.toml  build.rs
devtools_cpp/src/: main.rs
encoding/: Cargo.toml
encoding/examples/: base64.rs  csv_color_hex_to_rgb.rs  csv_read.rs  csv_read_as_struct.rs  csv_read_invalid_data.rs  csv_read_with_delimiter.rs  csv_read_with_query.rs  csv_serialize_as_csv.rs  encoding_url_encoding.rs  form.rs  hex.rs  structure_data_byteorder.rs  structure_data_deserialize_toml.rs  structure_data_json.rs  urlencode.rs
error_handling/: Cargo.toml
error_handling/examples/: universe_error_handling.rs
linear_algebra/: Cargo.toml
linear_algebra/examples/: arr_sum.rs  array_add.rs  array_multiple.rs
logging/: Cargo.toml  log4rs.yaml
logging/examples/: log4rs_default.rs
macros/src/: helper_macro.rs  main.rs
text-handling/: Cargo.toml
web-programming/: Cargo.toml
web-programming/examples/: apis_create_delete_gist.rs  apis_github.rs  apis_pagination.json  apis_pagination.rs  check_dead_links.rs  download_blocks.rs  download_paste.rs  download_temp.rs  extract_links.rs  mime_response.rs  mime_type_byfile.rs  mime_type_bystring.rs  n.rs  request_async.rs  request_custom.rs  request_get.rs  request_json_complex_struct.rs  request_json_hashmap.rs  request_json_struct.rs  request_json_test.rs  request_send.rs  unique_links.rs  url_base.rs  url_clean.rs  url_components.rs  url_from_base.rs  url_origin.rs  url_parse.rs  url_slice.rs  web_auth.rs  webapi_get.rs  webapi_head.rs  webapi_pagination.json  webapi_pagination.rs
