[workspace]

members = [
    "algorithm",
    "commandline",
    "compress",
    "concurrency",
    "cryptography",
    "data-structure",
    "macros",
    "database",
    "datetime",
    "logging",
    "encoding",
    "web-programming",
    "linear_algebra",
    "error_handling",
    "text-handling",
    "devtools_c",
    "devtools_c_define",
    "devtools_cpp",
]