[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.1", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.6"
data-encoding = "2.3.2"
error-chain = "0.12.4"
glob = "0.3.0"
image = "0.24.1"
lazy_static = "1.4.0"
log = "0.4.16"
log4rs = "1.1.1"
num_cpus = "1.13.1"
rand = "0.8.5"
rayon = "1.5.2"
ring = "0.16.20"
threadpool = "1.8.1"
walkdir = "2.3.2"
