[package]
name = "devtools_c_define"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1"

[dependencies]
cc = { version = "1.0.73", features = ["jobserver", "parallel"] }
error-chain = "0.12.4"