[package]
name = "encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
data-encoding = "2.3.2"
error-chain = "0.12.4"
url = "2.2.2"
percent-encoding = "2.2.0"
csv = "1.1.6"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
toml = "0.5.9"
byteorder = "1.4.3"
