[package]
name = "web-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
lazy_static = "1.4.0"
mime = "0.3.16"
regex = "1.5.5"
reqwest = "0.11.10"
select = "0.5.0"
tabular = "0.2.0"
term-table = "1.3.2"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
