[package]
name = "web-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.1.0", features = ["serde"] }
error-chain = "0.12.4"
hyper = { version = "0.14.18", features = ["full"] }
lazy_static = "1.4.0"
mime = "0.3.16"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
select = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tabular = "0.2.0"
tempdir = "0.3.7"
tempfile = "3.3.0"
term-table = "1.3.2"
tokio = { version = "1.17.0", features = ["full"] }
url = "2.2.2"
